...
                            </menuItem>
                            <menuItem title="Save" keyEquivalent="s" id="pxx-59-PXV">
                                <connections>
                                    <action selector="save:" target="Voe-Tx-rLC" id="y2A-2U-oNP"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Discard changes" id="KaW-ft-85H">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections>
                                    <action selector="discard:" target="er7-2A-M57" id="yAT-hQ-gUp"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Discard tracks" id="gan-sy-4Qi" userLabel="Discard tracks">
...
                                                                        <outlet property="textField" destination="Gmo-tg-1MM" id="aS6-kK-oqk"/>
                                                                    </connections>
                                                                </tableCellView>
                                                            </prototypeCellViews>
                                                        </tableColumn>
                                                        <tableColumn identifier="latitude" editable="NO" width="98" minWidth="10" maxWidth="3.4028234663852886e+38" id="EGN-Ry-sij">
                                                            <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Latitude">
                                                                <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                                <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                                                            </tableHeaderCell>
                                                            <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="DMD-7Q-hhq">
                                                                <font key="font" metaFont="system"/>
                                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
...
                                                                        <outlet property="textField" destination="tyW-mI-5bT" id="bo0-UW-G15"/>
                                                                    </connections>
                                                                </tableCellView>
                                                            </prototypeCellViews>
                                                        </tableColumn>
                                                        <tableColumn identifier="longitude" editable="NO" width="49" minWidth="10" maxWidth="3.4028234663852886e+38" id="0Bk-nM-nLV">
                                                            <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Longitude">
                                                                <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                                <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                                                            </tableHeaderCell>
                                                            <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="TDF-Pk-UcQ">
                                                                <font key="font" metaFont="system"/>
                                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
...
