...
    @State private var mainWindow: NSWindow?

    let windowWidth = 1000.0
    let windowHeight = 700.0

    var body: some Scene {
        Window("GeoTag Version Six", id: "main") {
            ContentView()
                .background(WindowAccessor(window: $mainWindow))
                .frame(minWidth: windowWidth, minHeight: windowHeight)
                .onChange(of: mainWindow) {
                    appDelegate.logger.debug("mainWindow changed")
                    store.send(.mainWindowChange(mainWindow), undoable: false)
...
    }
}

// Window ids

extension GeoTagScene {
    static var adjustTimeZone = "Change Time Zone"
    static var showRunLog = "GeoTag Run/Debug Log"
}

