...
        static let imageViewAltID = "ContentView.view.imageViewAlt"
        static let imageViewID = "ContentView.view.imageView"
        static let imageTableViewAltID = "ContentView.view.imageTableViewAlt"
        static let imageTableViewID = "ContentView.view.imageTableView"
        static let photoPickerViewID = "ContentView.view.photoPickerView"
        static let inspectorButtonViewID = "ContentView.view.inspectorButtonView"
        static let mapSearchViewID = "ContentView.view.mapSearchView"
    }

    enum DismissModifier {
        static let dismissButtonID = "DismissModifier.button.dismiss"
    }

...
